# Phonemis

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: rules.txt  tags.json
phonemis/include/phonemis/phonemizer/: constants.h  lexicon.h  types.h
phonemis/include/phonemis/preprocessor/: constants.h  text_utils.h
phonemis/include/phonemis/tagger/: tag.h  tagger.h
phonemis/include/phonemis/tokenizer/: constants.h  tokenize.h  tokens.h  types.h
phonemis/include/phonemis/utilities/: conversions.h  io_utils.h  string_utils.h
phonemis/src/: lexicon.cpp  phonemizer.cpp  pipeline.cpp  stress.cpp  tagger.cpp  text_utils.cpp  tokenize.cpp  tools.cpp
phonemize-cpp/include/phonemize/preprocessor/: constants.h  num2word.h  text2sentences.h  types.h
phonemize-cpp/include/phonemize/tokenizer/: constants.h  tokenize.h
phonemize-cpp/src/: num2word.cpp  text2sentences.cpp  tokenize.cpp
scripts/: build_android.sh  build_ios.sh  dataset_info.py  load_data.py  merge_dictionaries.py  normalize_dictionary.py  populate_hmm.py  test_viterbi.py  tokenizer_rules.py
src/tokenizer/: constants.h  tokenize.cpp  tokenize.h  types.h
test/: test_everything.cpp  test_pipeline.cpp  test_preprocessor.cpp  test_tagger.cpp  test_tokenizer.cpp
